-------------------------------------------------------------
Release 1 | Beta 0 | Development 5 | Experimental 1

* Added DebugCamera3D
* Added RenderablePhysicsObject2D
* Added MSAA support

* Created the package org.andor.game

* Changed org.andor.core.networking to org.andor.networking

-------------------------------------------------------------
Release 1 | Beta 0 | Development 5 | Experimental 0

* Added ShadowData
* Added ShadowMap
* Added Filter
* Added Uniform
* Added UniformFloat
* Added Uniforms
* Added UniformVector2D
* Added UniformVector3D

* Fixed bug: Matrix.ortho() was wrong

* NOTE: PointLights currently do not support shadows

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 3

* Added further shadow support

* NOTE: PointLights currently do not support shadows

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 2

* Added ShadowMap
* Added Filter
* Added Uniform
* Added UniformFloat
* Added Uniforms
* Added UniformVector2D
* Added UniformVector3D

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 1

* Added ShadowData

* Fixed bug: Matrix.ortho() was wrong

-------------------------------------------------------------
Release 1 | Beta 0 | Development 4 | Experimental 0

* Added IndexedModel
* Added ModelFace
* Added ModelVertex
* Added Texture
* Added Textures
* Added TextureParameters
* Added FBO
* Added RenderTexture

* Removed Face

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 3

* Added FBO
* Added RenderTexture

* Fixed bug: Last commit broke lighting positions

-------------------------------------------------------------
Release 1 | Beta 0 | Development 3 | Experimental 2

* Added Texture
* Added Textures
* Added TextureParameters
