@@ -1,4 +1,14 @@
 -------------------------------------------------------------
+Release 1 | Beta 0 | Development 5 | Experimental 2
+
+* Fixed bug: GUIComponentRenderer didn't use images properly
+* Fixed bug: Objects didn't take scale into account when
+			 returning their size
+* Fixed bug: EffectColourChange didn't change alpha values
+* Fixed bug: EffectColourChange could set the colour to
+			 negative values
+
+-------------------------------------------------------------
 Release 1 | Beta 0 | Development 5 | Experimental 1
 
 * Added DebugCamera3D
